project/tests/rsl_test_cases/pass/NESTED_LOGIC.rsl
scheme NESTED_LOGIC =
    class
      value
        evaluate : Int >< Int -> Bool
        evaluate(x, y) is ((x > 5) /\ (y < 5)) \/ ((x <= 5) /\ (y >= 5))
    end
  