project/tests/rsl_test_cases/fail/PURE_LOGIC.rsl
scheme PURE_LOGIC_NEGATIVE =
    class
      value
        logicGate : Bool >< Bool -> Int
        logicGate(a, b) is ~(a \/ b) /\ (a \/ ~b)
    end
